[package]
name = "tokio-condvar"
version = "0.1.0"
authors = ["Kai Mast <kaimast@cs.wisc.edu>"]
edition = "2021"
repository = "https://github.com/kaimast/tokoi-condvar"
description = "A Condition Variable for Tokio Applications"
license = "MIT"
readme = "README.md"
keywords = ["concurrency", "sync"]

[dependencies]
tokio = { version="1", features=["sync", "macros", "rt"] }
